Вынес кнопки регистрации в отдельный метод. Добавил комментарии к методам и логирование во всех сервисах. Удалил неиспользуемые методы.